[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "spyderwebb"
version = "1.0.0"
dependencies = [
  "jwst",
  "scipy",
  "numpy",
  "matplotlib",
  "astropy",
  "dill",
  "dlnpyutils",
  "thedoppler",
  "pandas",
  "asdf",
  "sphinx-astropy",
  "thechronos",
]
requires-python = ">=3.11"
authors = [
  {name = "David Nidever", email = "dnidever@montana.edu"},
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "JWST NIRspec multi-object spectroscopy reduction software"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["spectroscopy", "jwst", "radial velocity", "abundances"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dnidever/spyderwebb"
#Issues = "https://github.com/dnidever/romanspec/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
