[metadata]
name = spyderwebb
author = David Nidever
author_email = dnidever@montana.edu
license = MIT
license_files = LICENSE
url = https://github.com/dnidever/spyderwebb
description = JWST NIRSpec reduction software
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = dnidever/spyderwebb
version = 1.0.5

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    astropy
    scipy
    jwst
    thedoppler
    theborg
    torch
    

[options.entry_points]

[options.extras_require]
# Must be checked against requirements-dev.txt
test =
    pytest
    pytest-astropy
    ipython
docs =
    sphinx
    sphinx-astropy
    nbsphinx
    nbconvert
    nbformat
    ipykernel

[options.package_data]
* = *.c
thejoker.src = fast_likelihood.pyx
thejoker.tests = coveragerc

[tool:pytest]
testpaths = "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
